Moved to folder and removed input as per guidance

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 ownerproof-5282799-1764607166-103cc.txt
+2025/input_day_1.txt
+2025/input_day_2.txt
+2025/input_day_3.txt
+2025/input_day_4.txt
+2025/input_day_5.txt
+2025/input_day_6.txt
+2025/input_day_7.txt
+2025/input_day_8.txt
+2025/input_day_9.txt
